--- a/docs/src/content/docs/get-started/installation.mdx
+++ b/docs/src/content/docs/get-started/installation.mdx
@@ -3,6 +3,8 @@ title: installation
 description: how to install rovr
 ---
 
+import { Aside } from "@astrojs/starlight/components";
+
 ### requirements
 
 - a patched font that supports nerd font icons
@@ -18,7 +20,7 @@ description: how to install rovr
   you are recommended to use `uv`, as it handles everything for you, like
   installing the python version, a lot faster than what `pipx`, or `pip` would
   take
-- an editor with toml lsp
+- an editor with lsp support for toml
   <br />
   only necessary if you want an autocomplete box while configuring rovr.
 
@@ -33,8 +35,12 @@ uvx rovr
 #### uv (install)
 
 ```sh
-uv tool install rovr
+uv tool install rovr --compile-bytecode
 ```
+
+<Aside type="note">
+I highly recommend installling with `--compile-bytecode`, as startup times will be slower (albeit by not that much) if not cached.
+</Aside>
 
 #### pipx (install)
 
