fix: Add restriction information in docs

--- a/docs/src/content/docs/reference/schema.mdx
+++ b/docs/src/content/docs/reference/schema.mdx
@@ -4231,6 +4231,10 @@ Must be one of:
 
 **Description:** Number of PDF pages to load in each batch.
 
+| Restrictions |        |
+| ------------ | ------ |
+| **Minimum**  | &ge; 1 |
+
 ### <a name="plugins_file_one"></a>8.7. Property `Rovr Config > plugins > file_one`
 
 |                           |             |
