fix: quite a bit more

--- a/docs/src/content/docs/get-started/installation.mdx
+++ b/docs/src/content/docs/get-started/installation.mdx
@@ -36,11 +36,11 @@ uvx rovr
 #### uv (install)
 
 ```sh
-uv tool install rovr --compile-bytecode
+uv tool install --compile-bytecode rovr
 ```
 
 <Aside type="note">
-I highly recommend installling with `--compile-bytecode`, as startup times will be slower (albeit by not that much) if not cached.
+I highly recommend installing with `--compile-bytecode`, as startup times will be slower (albeit by not that much) if not cached.
 </Aside>
 
 #### pipx (install)
