--- a/docs/src/content/docs/reference/keybindings.mdx
+++ b/docs/src/content/docs/reference/keybindings.mdx
@@ -90,6 +90,7 @@ just copy over the contents of the desired profile into your `config.toml` file 
 | quit_app                     | Quit app               | <kbd>q</kbd> <kbd>ctrl+q</kbd>                 | <kbd>q</kbd> <kbd>ctrl+q</kbd>                 | <kbd>ctrl+q</kbd>                        |
 | command_palette              | Launch command palette | <kbd>ctrl+p</kbd>                              | <kbd>ctrl+p</kbd>                              | <kbd>ctrl+p</kbd>                        |
 | suspend_app                  | Suspend app            | <kbd>ctrl+z</kbd>                              | <kbd>ctrl+z</kbd>                              | <kbd>ctrl+z</kbd>                        |
+| open_editor                  | Open in editor         | <kbd>e</kbd>                                   | <kbd>e</kbd>                                   | <kbd>ctrl+o</kbd>                        |
 
 ## alternate layers
 
